change to my need

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>PoseOSC</title>
+    <title>Posenet-Unity-检测端</title>
   </head>
   <body>
     <video id="camera" autoplay> </video>
